<resources>
    <string name="app_name">SMERS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="password2">Password</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="register">Register</string>
</resources>
