<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/first_name"
        android:textSize="15sp"
        android:padding="5dp"
        android:background="@drawable/roundtext"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/last_name"
        android:textSize="15sp"
        android:padding="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/roundtext"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        android:textSize="15sp"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="35dp"
        android:padding="5dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/roundtext"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password2"
        android:textSize="15sp"
        android:layout_marginTop="320dp"
        android:padding="5dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:background="@drawable/roundtext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirm_password2"
        android:textSize="15sp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="5dp"
        android:background="@drawable/roundtext"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register"
        android:textSize="15sp"
        android:id="@+id/register"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="100dp"
        android:textAllCaps="false"
        android:background="@drawable/roundtext"/>


</RelativeLayout>
</ScrollView>